# claw-memory

./: .e2e_keys  .e2e_master_key  .gitignore  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SKILL.md  __init__.py  adaptive_retrieval.py  adaptive_weights.json  attachment_store.py  auto_backup.py  auto_extract.py  benchmark_dmr.py  benchmark_improvements.py  benchmark_results.json  benchmark_results_20260331_202828.json  benchmark_results_20260403_045521.json  benchmark_results_20260403_050044.json  benchmark_results_20260403_050411.json  benchmark_results_20260403_050917.json  benchmark_results_20260403_051330.json  benchmark_results_20260403_051755.json  benchmark_results_20260403_052332.json  benchmark_runner.py  benchmark_suite.py  chinese_extract.py  cli.py  cross_encoder_rerank.py  data_unification.py  denoise_filter.py  e2e_encryption.py  entity_disambiguation.py  industry_benchmark.py  industry_comparison.py  intent_classifier.py  kg_networkx.py  (+37 more)
api/: __init__.py  _auto.py  _main.py  _memory.py  _system.py  health.py  memory_health.py
backups/: memory_backup_20260331_182735.json
benchmark/: __init__.py  benchmark_improvements.py  benchmark_runner.py  benchmark_suite.py  professional_review.py
claw_memory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
core/: __init__.py  _cache.py  _db.py  _lancedb_base.py  _rerank.py  _search.py  _search_rrf.py  _store.py  memory_config.py  memory_config_multi.py  schema.py
extract/: __init__.py  auto_extract.py  chinese_extract.py  memory_extract.py
infra/: __init__.py  attachment_store.py  auto_backup.py  cli.py  errors.py  (+3 more)
(+48 files in other folders)
